--- a/xixihaha/index.html
+++ b/xixihaha/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>Flappy Winnie</title>
+        <title>Flappy Frog</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-        <meta name="apple-mobile-web-app-title" content="Flappy Winnie">
+        <meta name="apple-mobile-web-app-title" content="Flappy Frog">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-touch-fullscreen" content="yes">
         <link rel="apple-touch-icon" href="icons/Icon-App-60x60@2x.png">
@@ -21,7 +21,7 @@
                 height: 100%;
             }
             body {
-                background: #825705;
+                background: #430;
                 text-align: center;
                 overflow: hidden;
             }
@@ -30,7 +30,7 @@
             }
             #footer {
                 position: fixed;
-                bottom: 10px;
+                bottom: 4px;
                 width: 100%;
                 font-size: small;
             }
@@ -40,17 +40,17 @@
                 text-decoration: none;
             }
             #footer a, #footer a:visited {
-                color: rgb(19, 89, 64);
+                color: rgb(192, 68, 17);
             }
         </style>
     </head>
     <body>
         <div id="game"></div>
         <div id="footer">
-            <a href="/FlappyFrog/" target="_blank">Flappy Frog</a>
+            <a href="/xixihaha" target="_blank">Flappy Winnie</a>
             <a href="/ninja/" target="_blank">切青蛙</a>
             <a href="/bao/" target="_blank">切包子</a>
-            <a href="https://github.com/hahaxixi/hahaxixi.github.io" target="_blank">Source Code</a>
+            <a href="https://github.com/hahaxixi/FlappyFrog" target="_blank">Source Code</a>
         </div>
         <script src="lib/phaser.min.patched.js"></script>
         <script src="js/require.js"></script>
@@ -58,6 +58,7 @@
         <script src="js/utils.js"></script>
         <script src="js/sounds.js"></script>
         <script src="js/pipes.js"></script>
+        <script src="js/clouds.js"></script>
         <script src="js/game.js"></script>
         <script src="js/scene.js"></script>
         <script src="js/main.js"></script>
