--- a/xixihaha/index.html
+++ b/xixihaha/index.html
@@ -47,7 +47,7 @@
     <body>
         <div id="game"></div>
         <div id="footer">
-            <a href="/xixihaha" target="_blank">Flappy Winnie</a>
+            <a href="/FlappyFrog" target="_blank">Flappy Winnie</a>
             <a href="/ninja/" target="_blank">切青蛙</a>
             <a href="/bao/" target="_blank">切包子</a>
             <a href="https://github.com/hahaxixi/FlappyFrog" target="_blank">Source Code</a>
